# poc_crunchbase_startups

./: Makefile  README.md  crunchbase.db  pyproject.toml
scripts/: create_db.py  demo.py
src/: scraper.py  scraper_repo.py  utils.py
