[tool.poetry]
name = "crunchbase-scraper"
version = "0.1.0"
description = ""
authors = ["Carlos Vecina Tebar <carlos.vecina@cunef.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "5.10"
PyQt5-sip = "^12.9.0"
beautifulsoup4 = "^4.10.0"
pandas = "^1.3.5"
bs4 = "^0.0.1"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
undetected-chromedriver = "^3.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
